--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.12",
+    "tributejs": "^5.1.3",
+    "vue": "^2.6.14",
+    "vue-contenteditable": "^1.0.2",
+    "vue-tribute": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +23,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -27,13 +33,12 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
