--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "babel-plugin-macros": "^3.1.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
     "tributejs": "^5.1.3",
     "vue": "^2.6.14",
     "vue-contenteditable": "^1.0.2",
+    "vue-pdf-embed": "^1.1.5",
     "vue-tribute": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.1.0",
+    "@babel/helper-string-parser": "^7.19.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.18.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
