--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@tiptap/core": "^2.0.3",
+    "@tiptap/vue-2": "^2.0.3",
     "babel-plugin-macros": "^3.1.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
@@ -35,7 +37,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^8.0.3",
+    "eslint-config-airbnb-base": "^13.1.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
@@ -46,9 +50,8 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/recommended",
-      "eslint:recommended"
-    ],
+      "plugin:vue/essential"
+     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     }
