--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "babel-plugin-macros": "^3.1.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
-    "tributejs": "^5.1.3",
-    "vue": "^2.6.14",
-    "vue-contenteditable": "^1.0.2",
-    "vue-pdf-embed": "^1.1.5",
-    "vue-tribute": "^1.0.7"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
